# qwen3-asr.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  benchmark.py  conanfile.txt  main.py  pyproject.toml  qwen3_asr.py
.github/workflows/: build.yml
scripts/: gui.py  list_devices.py
src/: audio_encoder.cpp  audio_encoder.h  forced_aligner.cpp  forced_aligner.h  gguf_loader.cpp  gguf_loader.h  main.cpp  mel_spectrogram.cpp  portability.h  qwen3_asr.cpp  qwen3_asr.h  qwen3_asr_c.cpp  qwen3_asr_c.h  text_decoder.cpp  text_decoder.h
tests/: test_embedding.cpp  test_injection.cpp  test_intel_gpu.py
