[project]
name = "qwen3-asr-cpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.11.0",
]

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "safetensors>=0.7.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "librosa>=0.11.0",
]
